docs/new-site-build/main.css
/* ===========================================
   Reference Info
   =========================================== */

/*
 * COLORS:
 *
 * Text Gray .............. #524740;
 * Dark Gray .............. #555555; 
 * Light Gray ............. #b09679;
 * Lighter Gray ........... #eeeeee;
 * Blue ................... #23abe3;
 *
 *
 *
 /

/* ===========================================
   Base
   =========================================== */

*, *:before, *:after {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  line-height: 1.4;
  font-family: 'Roboto', Helvetica, Arial, sans-serif;
}

a {
  text-decoration: none;
}

img {
  max-width: 100%;
  display: block;
}

/* ===========================================
   Layout
   =========================================== */

.container {
  max-width: 1140px;
  width: 92%;
  margin: 0 auto;
}

.row {
  margin-right: -1em;
  margin-left: -1em;
}

.col {
  float: left;
  padding-left: 1em;
  padding-right: 1em;
}

.col-1-5  { width: 20%; }
.col-1-4  { width: 25%; }
.col-1-3  { width: 33.33333333%; }
.col-1-2  { width: 50%; }
.col-2-3  { width: 66.66666666%; }
.col-3-4  { width: 75%; }
.col-4-5  { width: 80%; }
.col-full { width: 100%; }

/* ===========================================
   Header
   =========================================== */

header {
  padding: 1em 0;
  background: #555555;
  overflow: hidden;
}

header a {
  color: #eeeeee;
}

.logo {
  float: left;
}

.main-nav ul {
  float: right;
  text-align: right;
  padding: 0;
  margin: .5em 0 0;
}

.main-nav li {
  display: inline-block;
  list-style-type: none;
  margin-left: 1.5em;
}

.main-nav a {
  text-decoration: none;
  font-size: 1.35em;
  font-weight: 300;
}

/* ===========================================
   Hero
   =========================================== */

.hero.hero--home {
  padding: 4em 0;
  background: #23abe3;
  overflow: hidden;
}

.hero--home .banner-logo {
  float: left;
  width: 65%;
}

.hero--home .wlabs-logo {
  float: right;
  width: 18%;
  margin-top: .5em;
}

